styles/style.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	font-size: 10px;
}

body {
	font-family: sans-serif;

}

a {
	text-decoration: none;
}

.header {
	display: grid;
	height: 110vh;
}

.header nav {
	display: grid;
	grid-auto-flow: column;
	place-items: center center;
	background: #494949;

	position: fixed;
	width: 100%;
	top: 0;
	z-index: 1;
}

.logo img {
	height: 100px;
}

nav .links {
	display: grid;
	grid-auto-flow: column;
	grid-gap: 50px;
}

nav .links a {
	color: #fff;
	text-transform: uppercase;
	font-size: 1.2rem;
}

.hero-image::before {
	background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/hero-image.jpg);
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;
	background-attachment: fixed;

	content: "";
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: -2;
}

.hero-image {
	position: relative;
	/*height: 105vh;*/

	display: grid;
	grid-template-columns: 1.4fr 1fr;
	grid-template-rows: repeat(4, 1fr);
	grid-auto-flow: column;
}

.hero-image h1 {
	grid-row: 2 / 3;
	font-size: 6rem;
	color: #fff;
	text-transform: capitalize;
	margin-left: 50px;

}

.hero-image p {
	margin-left: 50px;
	margin-top: 25px;
	font-size: 1.8rem;
	color: #fff;
}

.hero-image > a {
	grid-row: 4 / 5;
	color: #363636;
	font-size: 2rem;
	margin-left: 50px;
	padding: 20px;
	background-color: #f2bb55; 
	width: 25%;
	text-align: center;
	text-transform: uppercase;

	position: absolute;
	bottom: 80px;

}

.about-yganico {
	height: 120vh;
	display: grid;
	grid-template-columns: 2fr 2.5fr;
	grid-auto-flow: column;
	align-items: center;
	justify-items: center;
}

.about-left > * {
	margin-bottom: 50px;
}

.about-left {
	display: flex;
	flex-direction: column;
	margin-left: 65px;
	margin-top: 15px;
}

.about-left .left-p1 {
	text-transform: uppercase;
	font-size: 1.4rem;
	margin-left: 5px;
	color: ;

}

.about-left h2 {
	margin-top: -20px;
	font-size: 5.5rem;
	text-transform: capitalize;
}

.about-left .left-p2 {
	font-size: 1.6rem;
	line-height: 2;
}

.about-right img {
	height: 400px;
	width: 550px;
}

.gmo-products {
	height: 100vh;
	display: grid;
	grid-template-columns: 1fr 600px;
	justify-items: center;
	margin-top: 100px;
	background: #f5f5f5;
}

.gmo-products i {
	color: #363636;
}

.gmo-img img {
	height: 525px;
	width: 550px;
}

.gmo-caption {
	display: grid;
	margin-right: 105px;
}

.gmo-caption .gmo-p1 {
	text-transform: uppercase;
	font-size: 1.4rem;
}

.gmo-caption h2 {
	font-size: 3rem;
	margin-top: -50px;
}

.gmo-certified,
.gmo-prices {
	display: flex;
	margin-top: -25px;
}

.gmo-certified .certified-icon,
.gmo-prices .prices-icon {
	font-size: 3rem;
	margin: 10px 20px;
}

.certified-caption h5,
.prices-caption h5 {
	text-transform: capitalize;
	font-size: 2.5rem;
	margin-bottom: 25px;
}

.certified-caption p,
.prices-caption p {
	font-size: 1.5rem;
	line-height: 1.5;
}

